tests/baselines/reference/bigint-numeric-separator-literal-lol-07-err.errors.txt
bigint-numeric-separator-literal-lol-07-err.ts(53,1): error TS1121: Octal literals are not allowed. Use the syntax '0o7'.
bigint-numeric-separator-literal-lol-07-err.ts(53,3): error TS1005: ';' expected.
bigint-numeric-separator-literal-lol-07-err.ts(53,3): error TS2304: Cannot find name '_0n'.


==== bigint-numeric-separator-literal-lol-07-err.ts (3 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator must not be in a LegacyOctalLikeDecimalIntegerLiteral (07_0)
        )
    info: |
      NumericLiteral ::
        DecimalIntegerLiteral BigIntLiteralSuffix
        NumericLiteralBase BigIntLiteralSuffix
    
      NumericLiteralBase ::
        BinaryIntegerLiteral
        OctalIntegerLiteral
        HexIntegerLiteral
    
      BigIntLiteralSuffix :: n
    
      NumericLiteralSeparator ::
        _
    
      DecimalIntegerLiteral ::
        0
        NonZeroDigit DecimalDigitsopt
        NonZeroDigit
        NonZeroDigit NumericLiteralSeparator_opt DecimalDigits
        NonOctalDecimalIntegerLiteral
    
      NonOctalDecimalIntegerLiteral ::
        0 NonOctalDigit
        LegacyOctalLikeDecimalIntegerLiteral NonOctalDigit
        NonOctalDecimalIntegerLiteral DecimalDigit
    
      LegacyOctalLikeDecimalIntegerLiteral ::
        0 OctalDigit
        LegacyOctalLikeDecimalIntegerLiteral OctalDigit
    
      NonOctalDigit::one of
        8 9
    
      OctalDigit::one of
        0 1 2 3 4 5 6 7
    negative:
      phase: parse
      type: SyntaxError
    features: [BigInt, numeric-separator-literal]
    ---*/
    
    
    07_0n;
    ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o7'.
      ~~~
!!! error TS1005: ';' expected.
      ~~~
!!! error TS2304: Cannot find name '_0n'.
    